--- a/config/database.yml
+++ b/config/database.yml
@@ -59,6 +59,12 @@ test:
   <<: *default
   database: pi-image_test
 
+demo:
+  <<: *default
+  database: pi-image_demo
+  username: pi-image
+  password: <%= ENV['DATABASE_PASSWORD'] %>
+
 # As with config/secrets.yml, you never want to store sensitive information,
 # like your database password, in your source code. If your source code is
 # ever seen by anyone, they now have access to your database.
@@ -82,4 +88,4 @@ production:
   <<: *default
   database: pi-image_production
   username: pi-image
-  password: <%= ENV['PI-IMAGE_DATABASE_PASSWORD'] %>
+  password: <%= ENV['DATABASE_PASSWORD'] %>
