--- a/config/database.yml
+++ b/config/database.yml
@@ -63,7 +63,7 @@ demo:
   <<: *default
   database: pi-image_demo
   username: pi-image
-  password: <%= ENV['DATABASE_PASSWORD'] %>
+  password: <%= Rails.application.credentials.database_password %>
 
 # As with config/secrets.yml, you never want to store sensitive information,
 # like your database password, in your source code. If your source code is
@@ -88,4 +88,4 @@ production:
   <<: *default
   database: pi-image_production
   username: pi-image
-  password: <%= ENV['DATABASE_PASSWORD'] %>
+  password: <%= Rails.application.credentials.database_password %>
